downgraded to Java 1.7